# MARC

./: .gitignore  Makefile  README.md  archives.py  evaluate.py  mypy.ini  neat_controller.py  neat_controller_test.py  neat_controller_train.py  pyproject.toml  run_coea.py  run_multi_ppo.py  run_ppo.py  run_sample_opponent_ppo.py  run_single_ppo.py  setup.cfg  visualize_env.py
alg/: controller.py  evaluate.py
alg/coea/: __init__.py  coea_utils.py  dummy_structure.py  evolve.py  evolve_single.py  matching.py  population.py  structure.py
alg/neat/: __init__.py  controller.py  evaluate.py  play.py
alg/ppo/: __init__.py  controller.py  distributions.py  envs.py  (+10 more)
analysis/: analysis_utils.py  analyze_coea.py  analyze_ppo.py  evolution_heatmap.py  evolution_lineplot.py  fitness.py  visualize.py  visualize_evo_path.py  write_body_image.py
envs/: __init__.py  base.py  box_push.py  chase_env.py  chimney_clash.py  chimney_env.py  make.py  ojama_env.py  pass_and_block.py  push_env.py  sumo.py  sumo_env.py  typehints.py  wrapper.py
legacy/: compare_delta.py  run_multi_ppo.py
neat_config/: controller_config
scripts/: run_coea.py  run_coea_single.py  run_neat_single.py  run_ppo.py  run_ppo_single.py
tests/: test_custom_envs.py  test_env.py  test_population.py  test_single_agent_wrapper.py  test_structure.py  test_wrappers.py
utils/: __init__.py  agent_id.py  arguments.py  name.py  seed.py  test.py
world_data/: ChimneyClash.json  MultiPusher-v2.json  Ojama-depth-3.json  Ojama-depth-5.json  WallPusher-v0.json  h_chase_env.json  simple_sumo_env.json  sumo_env.json
(+15 files in other folders)
