[tool.poetry]
name = "marc"
version = "0.1.0"
description = ""
authors = ["kazukazupi <22kazuaki22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
evogym = "2.0.0"
torch = "1.12.0"
gymnasium = "0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
